--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "github:tailwindcss/typography",
     "gray-matter": "^4.0.3",
     "next": "14.2.5",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
